Updated Filter Name

--- a/views/index.jade
+++ b/views/index.jade
@@ -19,7 +19,7 @@ block body
                 li
                     a(href="",data-toggle="tab", ng-click="filterBy = 'Upokorzenie'") Upokorzenie
                 li
-                    a(href="", data-toggle="tab", ng-click="filterBy = 'Farty'") Farty
+                    a(href="", data-toggle="tab", ng-click="filterBy = 'Farty'") Stalowe Nerwy
                 li
                     a(href="",data-toggle="tab", ng-click="filterBy = 'Dominacja'") Dominacja
         div.scores
