Go Back to main page from addResult

--- a/views/addResult.jade
+++ b/views/addResult.jade
@@ -1,5 +1,6 @@
 extends layout
 block body
+    a(href="/") << Back
     div(ng-controller="AddResultCtrl")
         p
             form.form-horizontal
