--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ extends layout
 block body
     div.text-center(ng-controller='FirstCtrl as ctrl')
         h2.text-center.title
-            img.teamLogo(src='img/heroes.png')
+            img.teamLogo(src='img/treeFriends.png')
             span.text-success {{1 | teamName}}
             span   vs
             span.text-error  {{2 | teamName}}
