Scripts are loaded localy instead of CDN. Application is deployed & run in the intranet and it works better this way.

--- a/views/addResult.jade
+++ b/views/addResult.jade
@@ -18,8 +18,8 @@ block body
                         button.btn(ng-disabled="form.$invalid", ng-click="addResult(match)") Submit
 
 
-    script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js')
-    script(src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
+    script(src='js/lib/angular/angular.min_1.2.js')
+    script(src='js/lib/jquery-1.11.1.min.js')
     script(src='js/lib/bootstrap.min.js')
     script(src='js/myAppCtrl.js')
 //
