--- a/views/index.jade
+++ b/views/index.jade
@@ -43,8 +43,8 @@ block body
         br
         br
 
-    script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js')
-    script(src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
+    script(src='js/lib/angular/angular.min_1.2.js')
+    script(src='js/lib/jquery-1.11.1.min.js')
     script(src='js/lib/bootstrap.min.js')
     script(src='js/myAppCtrl.js')
 
